--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,23 @@
 		    <version>2.2.1</version>
 		    <scope>compile</scope>
 	    </dependency>
+	    <dependency>
+    		<groupId>com.zaxxer</groupId>
+    		<artifactId>HikariCP</artifactId>
+    		<version>4.0.2</version>
+		</dependency>
+		<dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.32.3.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.41</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>Stargate-${project.version}</finalName>
@@ -71,6 +88,7 @@
                     <artifactSet>
                         <includes>
                             <include>org.bstats:*</include>
+                            <include>com.zaxxer:*</include>
                          </includes>
                     </artifactSet>
                 </configuration>
