A refactor, and adding some sql statements

--- a/src/main/resources/hikari.properties
+++ b/src/main/resources/hikari.properties
@@ -1,4 +1,5 @@
-#Paramnestic Hikari Datasource Properties for advanced database Configuration
+# Stargate Hikari Datasource Properties for advanced database Configuration
+# For more information go to https://github.com/brettwooldridge/HikariCP#gear-configuration-knobs-baby
 dataSource.user=default
 dataSource.password=pas
 dataSource.cachePrepStmts=true
