Changes the default folders to prevent problems on Unix systems

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -32,8 +32,8 @@
 
 language: en
 folders:
-  portalFolder: plugins/stargate/portals/
-  gateFolder: plugins/stargate/gates/
+  portalFolder: plugins/Stargate/portals/
+  gateFolder: plugins/Stargate/gates/
 gates:
   maxGatesEachNetwork: 0
   defaultGateNetwork: central
