--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
                 <directory>src/main/resources/</directory>
                 <filtering>true</filtering>
                 <includes>
-                    <include>*</include>
+                    <include>**</include>
                 </includes>
             </resource>
         </resources>
