Adds an option for silent stargates which don't print teleportation messages or errors to the player's chat #7

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -97,6 +97,7 @@ permissions:
       stargate.option.show: true
       stargate.option.nonetwork: true
       stargate.option.random: true
+      stargate.option.silent: true
   stargate.option.hidden:
     description: Allows the creation of a hidden stargate
     default: false
@@ -120,6 +121,9 @@ permissions:
     default: false
   stargate.option.random:
     description: Allows the creation of a stargate with a random destination
+    default: false
+  stargate.option.silent:
+    description: Allows the creation of a stargate which does not output anything to the chat
     default: false
   stargate.admin.hidden:
     description: Allows this player to see all hidden stargates
